# hflint

./: .gitignore  hflint.cabal  test.sh
csrc/: flint_define_additionals.c  flint_define_additionals.h  flint_define_wrappers.c  flint_define_wrappers.h  fmpz_wrapper.c  fmpz_wrapper.h
src/Flint/: Algebra.hs  FMPQ.hs  FMPQMat.hs  FMPZ.hs
src/Flint/FMPQ/: Arithmetic.hs  FFI.hsc
src/Flint/FMPQMat/: Basic.hs  Echelon.hs  FFI.hsc  Internal.hs
src/Flint/FMPZ/: Arithmetic.hs  FFI.hsc  Internal.hs
src/Flint/Internal/: Flint.hs  FlintCalls.hs  FlintMat.hs  FlintMatArithmetic.hs
src/Flint/Matrix/: Basic.hs  Internal.hs
src/Flint/Matrix/Echelon/: EchelonFormByBlocks.hs  EchelonFormPrimitive.hs  EchelonHook.hs
src/Flint_OLD/: Algebra.hs  Matrix.hs
src/Flint_OLD/FMPQMat/: Echelon.hs  FFI.hsc  Internal.hs
src/Flint_OLD/Matrix/: Basic.hs  Echelon.hs  Internal.hs
src/Flint_OLD/Matrix/Echelon/: EchelonFormByBlocks.hs  EchelonParameter.hs  EchelonReader.hs  EchelonizedRow.hs
src/HFlint/: .TODO.swp  FMPQ.hs  FMPQMat.hs  FMPQPoly.hs  FMPZ.hs  FMPZPoly.hs  FMPZPolyFactor.hs  Internal.hs  NF.hs  NMod.hs  Primes.hs  TODO
src/HFlint/FMPQ/: Algebra.hs  Arithmetic.hs  Base.hs  Basic.hs  FFI.hs  FFI.hsc  FFI.pre.hsc  Internal.hs  Reduction.hs
src/HFlint/FMPQ/Tasty/: QuickCheck.hs  SmallCheck.hs
src/HFlint/FMPQMat/: Base.hs  FFI.hsc
src/HFlint/FMPQPoly/: Algebra.hs  Base.hs  Basic.hs  FFI.hs  FFI.hsc  FFI.pre.hsc  Factor.hs  Internal.hs
src/HFlint/FMPZ/: Algebra.hs  Arithmetic.hs  Base.hs  Basic.hs  FFI.hs  FFI.hsc  FFI.pre.hsc  Internal.hs  Limbs.hs  Reduction.hs
src/HFlint/FMPZ/Reduction/: FMPZCRT.hs  FMPZCRTFlintLimb.hs  FMPZCRTNMod.hs
src/HFlint/FMPZ/Tasty/: QuickCheck.hs  SmallCheck.hs
src/HFlint/FMPZPoly/: Algebra.hs  Base.hs  Basic.hs  FFI.hs  FFI.hsc  FFI.pre.hsc  Factor.hs  Internal.hs  Special.hs
src/HFlint/FMPZPolyFactor/: FFI.hs  FFI.hsc  FFI.pre.hsc  Internal.hs
src/HFlint/Internal/: Const.hs  Context.hs  Factor.hs  Flint.hs  FlintPrim.hs  FlintWithContext.hs  Lift.hs  LiftCtx.hs  LiftPrim.hs  TH.hs  Utils.hs
src/HFlint/Internal/Lift/: Utils.hs
src/HFlint/NF/: Algebra.hs  Arithmetic.hs  Base.hs  Context.hs  FFI.hsc
src/HFlint/NMod/: Algebra.hs  Arithmetic.hs  Base.hs  Context.hs  FFI.hs  FFI.hsc  FFI.pre.hsc  Internal.hs  Reduction.hs  Vector.hs
src/HFlint/NMod/Tasty/: QuickCheck.hs  SmallCheck.hs
src/HFlint/Primes/: Base.hs  FFI.hsc
src/HFlint/Utility/: Prelude.hs
test/: FMPQPolyTests.hs  FMPQTests.hs  FMPZPolyTests.hs  FMPZTests.hs  Primes.hs  TestHFlint.hs  test-hflint.hs
test/FMPQTests/: Rational.hs  Utils.hs
test/FMPZTests/: Algebra.hs  Integer.hs  Utils.hs
test/HFlint/: Test.hs
test/HFlint/FMPZ/Tasty/: QuickCheck.hs
test/HFlint/NMod/Tasty/: QuickCheck.hs
test/HFlint/Test/: FMPQ.hs  FMPQPoly.hs  FMPZ.hs  FMPZPoly.hs  Primes.hs
test/HFlint/Test/FMPQ/: Rational.hs
test/HFlint/Test/FMPZ/: Integer.hs
test/HFlint/Test/Primes/: UnitTests.hs
test/HFlint/Test/Utility/: DivisionByZero.hs  FMPQ.hs  FMPQPoly.hs  FMPZ.hs  FMPZPoly.hs  Intertwine.hs
test/Primes/: UnitTests.hs
test/TestHFlint/: Utils.hs
