name:                hflint
version:             0.0.1
synopsis:            Haskell binding to the FLINT library
description:         Haskell binding to the FLINT library.  This
 		     version is compatible with FLINT 2.4.
		     .
                     Since FLINT uses GMP, this library features
                     infrequent but serious errors with a ghc that
                     has been compiled with the default integer-gmp.
                     See documentation of hmpfr for a description of
                     possible solutions. GHC 7.10 fixes this bug.
category:            Data, Math
license:             GPL-3
license-file:        LICENSE
stability:           experimental
tested-with:         GHC==7.8.4
author:              Martin Westerholt-Raum <martin@raum-brothers.eu>
maintainer:          Martin Westerholt-Raum <martin@raum-brothers.eu>
homepage:            http://github.com/???
build-type:          Simple
cabal-version:       >= 1.16

data-files:          README

source-repository head
  type:     git
  location: https://github???

source-repository this
  type:     git
  location: https://github
  tag:      hflint-0.0.1

library
  default-language: Haskell2010
  build-depends:
      base > 3 && < 5
    , algebraic-structures
    , composition
    , containers
    , deepseq
    , data-default
    , deepseq
    , dlist
    , monad-loops
    , mtl
    , reflection
    , QuickCheck
    , vector
    , safe
    , smallcheck
    , template-haskell
    , transformers

  exposed-modules:
    HFlint.FMPQ
    HFlint.FMPQMat
    HFlint.FMPQPoly
    HFlint.FMPZ
    HFlint.FMPZPoly
    HFlint.FMPZPolyFactor
    HFlint.NMod
    HFlint.Primes

    HFlint.FMPZ.FFI
    HFlint.FMPQ.FFI

    HFlint.Internal

  other-modules:
    HFlint.FMPQ.Algebra
    HFlint.FMPQ.Arithmetic
    HFlint.FMPQ.Base
    HFlint.FMPQ.Reduction
    HFlint.FMPQ.Tasty.QuickCheck
    HFlint.FMPQ.Tasty.SmallCheck

    HFlint.FMPQMat.Base
    HFlint.FMPQMat.FFI

    HFlint.FMPQPoly.Algebra
    HFlint.FMPQPoly.Base
    HFlint.FMPQPoly.FFI

    HFlint.FMPZ.Algebra
    HFlint.FMPZ.Arithmetic
    HFlint.FMPZ.Base
    HFlint.FMPZ.Limbs
    HFlint.FMPZ.Reduction
    HFlint.FMPZ.Reduction.FMPZCRT
    HFlint.FMPZ.Reduction.FMPZCRTFlintLimb
    HFlint.FMPZ.Tasty.QuickCheck
    HFlint.FMPZ.Tasty.SmallCheck

    HFlint.FMPZPoly.Algebra
    HFlint.FMPZPoly.Base
    HFlint.FMPZPoly.FFI

    HFlint.FMPZPolyFactor.FFI

    HFlint.NMod.Algebra
    HFlint.NMod.Arithmetic
    HFlint.NMod.Base
    HFlint.NMod.Context
    HFlint.NMod.FFI
    HFlint.NMod.Reduction
    HFlint.NMod.Tasty.QuickCheck
    HFlint.NMod.Tasty.SmallCheck

    HFlint.Primes.Base
    HFlint.Primes.FFI

    HFlint.Internal.Context
    HFlint.Internal.Flint
    HFlint.Internal.FlintPrim
    HFlint.Internal.FlintWithContext
    HFlint.Internal.Lift
    HFlint.Internal.LiftCtx
    HFlint.Internal.LiftPrim
    HFlint.Internal.Lift.Utils
    HFlint.Internal.Utils
    HFlint.Internal.TH

  GHC-options:
    -Wall
    -fno-warn-orphans
    -fsimpl-tick-factor=500
    -threaded
  GHC-prof-options:
    -prof -auto
  cpp-options:
    -fPIC
  build-tools:         hsc2hs
  hs-source-dirs:      src

  include-dirs:
    csrc
  includes:
    flint/flint.h
    flint/fmpq.h
    flint/fmpq_poly.h
    flint/fmpz.h

    flint_define_additionals.h
    flint_define_wrappers.h
  install-includes:
    flint_define_additionals.h
    flint_define_wrappers.h
  c-sources:
    csrc/flint_define_additionals.c
    csrc/flint_define_wrappers.c

  extra-libraries:
    c,
    stdc++,
    flint,
    gf2x,
    gmp,
    mpfr,
    ntl

test-suite test-hflint
  build-depends:
    base,
    algebraic-structures,
    hflint == 0.0.1,
    composition,
    split,
    tasty,
    tasty-smallcheck,
    tasty-quickcheck,
    tasty-hunit,
    vector

  GHC-options:
    -Wall
    -fno-warn-orphans
    -static
    -fsimpl-tick-factor=500

  main-is:    TestHFlint.hs
  hs-source-dirs: test

  type:       exitcode-stdio-1.0
  default-language: Haskell2010
