name:                hflint
version:             0.0.1
synopsis:            Haskell binding to the FLINT library
description:         Haskell binding to the FLINT library.  This
 		     version is compatible with FLINT 2.5.
		     .
                     Since FLINT uses GMP, this library features
                     infrequent but serious errors with a ghc that
                     has been compiled with the default integer-gmp.
                     See documentation of hmpfr for a description of
                     possible solutions. GHC 7.10 fixes this bug.
category:            Data, Math
license:             GPL-3
license-file:        LICENSE
stability:           experimental
tested-with:         GHC==8.0.2
author:              Martin Raum <martin@raum-brothers.eu>
maintainer:          Martin Raum <martin@raum-brothers.eu>
build-type:          Simple
cabal-version:       >= 1.16

data-files:          README.md

library
  exposed-modules:
    HFlint.FMPQ
    HFlint.FMPQMat
    HFlint.FMPQPoly
    HFlint.FMPZ
    HFlint.FMPZPoly
    HFlint.FMPZPolyFactor
    HFlint.NF
    HFlint.NMod
    HFlint.Primes

    HFlint.FMPQ.FFI
    HFlint.FMPQMat.FFI
    HFlint.FMPQPoly.FFI
    HFlint.FMPZ.FFI
    HFlint.FMPZPoly.FFI
    HFlint.FMPZPolyFactor.FFI
    HFlint.NF.FFI
    HFlint.NMod.FFI
    HFlint.Primes.FFI

    HFlint.Internal

  other-modules:
    HFlint.FMPQ.Algebra
    HFlint.FMPQ.Arithmetic
    HFlint.FMPQ.Base
    HFlint.FMPQ.Reduction
    HFlint.FMPQ.Tasty.QuickCheck
    HFlint.FMPQ.Tasty.SmallCheck

    HFlint.FMPQMat.Base

    HFlint.FMPQPoly.Algebra
    HFlint.FMPQPoly.Base

    HFlint.FMPZ.Algebra
    HFlint.FMPZ.Arithmetic
    HFlint.FMPZ.Base
    HFlint.FMPZ.Limbs
    HFlint.FMPZ.Reduction
    HFlint.FMPZ.Reduction.FMPZCRT
    HFlint.FMPZ.Reduction.FMPZCRTFlintLimb
    HFlint.FMPZ.Tasty.QuickCheck
    HFlint.FMPZ.Tasty.SmallCheck

    HFlint.FMPZPoly.Algebra
    HFlint.FMPZPoly.Base
    HFlint.FMPZPoly.Special

    HFlint.NF.Algebra
    HFlint.NF.Arithmetic
    HFlint.NF.Base
    HFlint.NF.Context

    HFlint.NMod.Algebra
    HFlint.NMod.Arithmetic
    HFlint.NMod.Base
    HFlint.NMod.Context
    HFlint.NMod.Reduction
    HFlint.NMod.Tasty.QuickCheck
    HFlint.NMod.Tasty.SmallCheck

    HFlint.Primes.Base

    HFlint.Internal.Context
    HFlint.Internal.Flint
    HFlint.Internal.FlintPrim
    HFlint.Internal.FlintWithContext
    HFlint.Internal.Lift
    HFlint.Internal.LiftCtx
    HFlint.Internal.LiftPrim
    HFlint.Internal.Lift.Utils
    HFlint.Internal.Utils
    HFlint.Internal.TH

    HFlint.Utility.Prelude

  build-depends:
      base > 3 && < 5
    , algebraic-structures
    , composition
    , containers
    , deepseq
    , data-default
    , deepseq
    , dlist
    , monad-loops
    , mtl
    , reflection
    , QuickCheck
    , vector
    , safe
    , smallcheck
    , template-haskell
    , transformers

  extra-libraries:
    flint,
    gf2x,
    gmp,
    mpfr,
    ntl

  include-dirs:
    csrc
  includes:
    flint/flint.h
    flint/fmpq.h
    flint/fmpq_poly.h
    flint/fmpz.h

    flint_define_additionals.h
    flint_define_wrappers.h
  install-includes:
    flint_define_additionals.h
    flint_define_wrappers.h
  c-sources:
    csrc/flint_define_additionals.c
    csrc/flint_define_wrappers.c

  build-tools:         hsc2hs

  GHC-options:
    -Wall
    -fno-warn-orphans
    -fsimpl-tick-factor=500
  cpp-options:
    -fPIC

  hs-source-dirs:      src
  default-language: Haskell2010

test-suite test-hflint
  main-is:    HFlint/Test.hs

  other-modules:
    HFlint.Test.FMPQ
    HFlint.Test.FMPQ.Rational
    HFlint.Test.FMPQPoly
    HFlint.Test.FMPZ
    HFlint.Test.FMPZ.Integer
    HFlint.Test.FMPZPoly
    HFlint.Test.Primes
    HFlint.Test.Primes.UnitTests

    HFlint.Test.Utility.DivisionByZero


    HFlint.FMPQ
    HFlint.FMPQMat
    HFlint.FMPQPoly
    HFlint.FMPZ
    HFlint.FMPZPoly
    HFlint.FMPZPolyFactor
    HFlint.NF
    HFlint.NMod
    HFlint.Primes

    HFlint.FMPQ.FFI
    HFlint.FMPQMat.FFI
    HFlint.FMPQPoly.FFI
    HFlint.FMPZ.FFI
    HFlint.FMPZPoly.FFI
    HFlint.FMPZPolyFactor.FFI
    HFlint.NF.FFI
    HFlint.NMod.FFI
    HFlint.Primes.FFI

    HFlint.Internal

    HFlint.FMPQ.Algebra
    HFlint.FMPQ.Arithmetic
    HFlint.FMPQ.Base
    HFlint.FMPQ.Reduction
    HFlint.FMPQ.Tasty.QuickCheck
    HFlint.FMPQ.Tasty.SmallCheck

    HFlint.FMPQMat.Base

    HFlint.FMPQPoly.Algebra
    HFlint.FMPQPoly.Base

    HFlint.FMPZ.Algebra
    HFlint.FMPZ.Arithmetic
    HFlint.FMPZ.Base
    HFlint.FMPZ.Limbs
    HFlint.FMPZ.Reduction
    HFlint.FMPZ.Reduction.FMPZCRT
    HFlint.FMPZ.Reduction.FMPZCRTFlintLimb
    HFlint.FMPZ.Tasty.QuickCheck
    HFlint.FMPZ.Tasty.SmallCheck

    HFlint.FMPZPoly.Algebra
    HFlint.FMPZPoly.Base
    HFlint.FMPZPoly.Special

    HFlint.NF.Algebra
    HFlint.NF.Arithmetic
    HFlint.NF.Base
    HFlint.NF.Context

    HFlint.NMod.Algebra
    HFlint.NMod.Arithmetic
    HFlint.NMod.Base
    HFlint.NMod.Context
    HFlint.NMod.Reduction
    HFlint.NMod.Tasty.QuickCheck
    HFlint.NMod.Tasty.SmallCheck

    HFlint.Primes.Base

    HFlint.Internal.Context
    HFlint.Internal.Flint
    HFlint.Internal.FlintPrim
    HFlint.Internal.FlintWithContext
    HFlint.Internal.Lift
    HFlint.Internal.LiftCtx
    HFlint.Internal.LiftPrim
    HFlint.Internal.Lift.Utils
    HFlint.Internal.Utils
    HFlint.Internal.TH

  build-depends:
      base
    , QuickCheck
    , algebraic-structures
    , base
    , composition
    , containers
    , data-default
    , deepseq
    , dlist
    , monad-loops
    , mtl
    , reflection
    , safe
    , smallcheck
    , split
    , tasty
    , tasty-hunit
    , tasty-quickcheck
    , tasty-smallcheck
    , template-haskell
    , transformers
    , vector

  extra-libraries:
    flint,
    gf2x,
    gmp,
    mpfr,
    ntl

  include-dirs:
    csrc
  includes:
    flint/flint.h
    flint/fmpq.h
    flint/fmpq_poly.h
    flint/fmpz.h

    flint_define_additionals.h
    flint_define_wrappers.h
  install-includes:
    flint_define_additionals.h
    flint_define_wrappers.h
  c-sources:
    csrc/flint_define_additionals.c
    csrc/flint_define_wrappers.c

  build-tools:         hsc2hs

  GHC-options:
    -Wall
    -fno-warn-orphans
    -fsimpl-tick-factor=500

  hs-source-dirs: test, src
  type:       exitcode-stdio-1.0
  default-language: Haskell2010
