cabal-version:       3.0
name:                hflint
version:             0.0.2
synopsis:            Haskell binding to the FLINT library
description:
  Haskell binding to the FLINT library.  This version is compatible with FLINT 2.7.
  .
  Since FLINT uses GMP, this library features
  infrequent but serious errors with a ghc that
  has been compiled with the default integer-gmp.
  See documentation of hmpfr for a description of
  possible solutions. GHC 7.10 fixes this bug.
category:            Data, Math
license:             GPL-3.0-only
license-file:        LICENSE
stability:           experimental
tested-with:         GHC==8.0.2
author:              Martin Raum <martin@raum-brothers.eu>
maintainer:          Martin Raum <martin@raum-brothers.eu>
build-type:          Simple

data-files:          README.md

common common

  build-depends:
      base
        >= 4.8   && < 4.17
    , template-haskell
        >= 2.10  && < 2.19
    , algebraic-structures
        >= 0.1.1 && < 0.2
    , composition
        >= 1.0   && < 1.1
    , containers
        >= 0.6   && <= 0.6.5
    , data-default
        >= 0.7   && < 0.8
    , deepseq
        >= 1.4   && < 1.5
    , dlist
        >= 1.0   && < 1.1
    , safe-exceptions
        >= 0.1   && < 0.2
    , monad-loops
        >= 0.4   && < 0.5
    , mono-traversable
        >= 1.0   && < 1.1
    , mtl
        >= 2.2   && < 2.3
    , reflection
        >= 2.1   && < 2.2
    , safe
        >= 0.3   && < 0.4
    , transformers
        >= 0.5   && < 0.6
    , vector
        >= 0.11 && < 0.13
    , vector-th-unbox

  default-language:
    Haskell2010

  default-extensions:
      ConstraintKinds
    , FlexibleContexts
    , FlexibleInstances
    , GeneralizedNewtypeDeriving
    , MultiParamTypeClasses
    , RankNTypes
    , StandaloneDeriving
    , TypeFamilies


library
  
  import: common

  exposed-modules:
    HFlint.FMPQ
    HFlint.FMPQMat
    HFlint.FMPQPoly
    HFlint.FMPZ
    HFlint.FMPZPoly
    HFlint.FMPZPolyFactor
    HFlint.NF
    HFlint.NMod
    HFlint.Primes

    HFlint.FMPQ.FFI
    HFlint.FMPQMat.FFI
    HFlint.FMPQPoly.FFI
    HFlint.FMPZ.FFI
    HFlint.FMPZPoly.FFI
    HFlint.FMPZPolyFactor.FFI
    HFlint.NF.FFI
    HFlint.NMod.FFI
    HFlint.Primes.FFI

    HFlint.Internal

    HFlint.FMPQ.Algebra
    HFlint.FMPQ.Arithmetic
    HFlint.FMPQ.Base
    HFlint.FMPQ.Reduction

    HFlint.FMPQMat.Base

    HFlint.FMPQPoly.Algebra
    HFlint.FMPQPoly.Base

    HFlint.FMPZ.Algebra
    HFlint.FMPZ.Arithmetic
    HFlint.FMPZ.Base
    HFlint.FMPZ.Limbs
    HFlint.FMPZ.Reduction
    HFlint.FMPZ.Reduction.FMPZCRT
    HFlint.FMPZ.Reduction.FMPZCRTFlintLimb

    HFlint.FMPZPoly.Algebra
    HFlint.FMPZPoly.Base
    HFlint.FMPZPoly.Special

    HFlint.NF.Algebra
    HFlint.NF.Arithmetic
    HFlint.NF.Base
    HFlint.NF.Context

    HFlint.NMod.Algebra
    HFlint.NMod.Arithmetic
    HFlint.NMod.Base
    HFlint.NMod.Context
    HFlint.NMod.Reduction
    HFlint.NMod.Vector

    HFlint.Primes.Base

  other-modules:

    HFlint.Internal.Context
    HFlint.Internal.Flint
    HFlint.Internal.FlintPrim
    HFlint.Internal.FlintWithContext
    HFlint.Internal.Lift
    HFlint.Internal.LiftCtx
    HFlint.Internal.LiftPrim
    HFlint.Internal.Lift.Utils
    HFlint.Internal.Utils
    HFlint.Internal.TH

    HFlint.Utility.Prelude

  extra-libraries:
    antic, flint, mpfr, gmp

  include-dirs:
    csrc

  c-sources:
    csrc/flint_define_additionals.c
    csrc/flint_define_wrappers.c

  GHC-options:
    -Wall
    -fno-warn-orphans
    -fsimpl-tick-factor=500
  cpp-options:
    -fPIC

  hs-source-dirs:     src
  default-language:   Haskell2010
  build-tool-depends: hsc2hs:hsc2hs


test-suite test-hflint

  import:             common

  hs-source-dirs:     test
  main-is:            HFlint/Test.hs

  other-modules:

    HFlint.FMPQ.Tasty.QuickCheck
    HFlint.FMPQ.Tasty.SmallCheck

    HFlint.FMPZ.Tasty.QuickCheck
    HFlint.FMPZ.Tasty.SmallCheck

    HFlint.NMod.Tasty.QuickCheck
    HFlint.NMod.Tasty.SmallCheck

    HFlint.Test.FMPQ
    HFlint.Test.FMPQ.Rational
    HFlint.Test.FMPQPoly
    HFlint.Test.FMPZ
    HFlint.Test.FMPZ.Integer
    HFlint.Test.FMPZPoly
    HFlint.Test.Primes
    HFlint.Test.Primes.UnitTests
    HFlint.Test.Utility.DivisionByZero

  default-extensions:
      ConstraintKinds
    , FlexibleContexts
    , FlexibleInstances
    , GeneralizedNewtypeDeriving
    , MultiParamTypeClasses
    , RankNTypes
    , StandaloneDeriving
    , TypeFamilies

  build-depends:
      hflint
    , algebraic-structures:algebraic-structures-test
    , QuickCheck
        >= 2.10  && < 2.15
    , smallcheck
        >= 1.1.3 && < 1.3
    , split
        >= 0.2   && < 0.3
    , tasty
        >= 1.1   && < 1.4
    , tasty-hunit
        >= 0.10  && < 0.11
    , tasty-quickcheck
        >= 0.10  && < 0.11
    , tasty-smallcheck
        >= 0.8   && < 0.9

  hs-source-dirs: test
  type: exitcode-stdio-1.0
